[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/SaveMenu.gd" type="Script" id=2]

[node name="SaveMenu" type="Control"]
pause_mode = 2
anchor_left = 0.233262
anchor_top = 0.165251
anchor_right = 0.792637
anchor_bottom = 0.798585
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Panel/VBoxContainer"]
margin_right = 357.0
margin_bottom = 22.0
text = "GUARDAR PARTIDA"
align = 1

[node name="SaveGamesList" type="ItemList" parent="Panel/VBoxContainer"]
margin_top = 26.0
margin_right = 357.0
margin_bottom = 192.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 196.0
margin_right = 357.0
margin_bottom = 228.0
alignment = 1

[node name="SaveGameName" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 193.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Atras" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 264.0
margin_bottom = 32.0
text = "Atras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 357.0
margin_bottom = 32.0
text = "Guardar"
__meta__ = {
"_edit_use_anchors_": false
}
